psa/add-psa-namespace-reporting/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-psa-namespace-reporting
status:
  ready: true
