psa/add-psa-namespace-reporting/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-psa-namespace-reporting
spec:
  steps:
  - name: apply-policy
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../add-psa-namespace-reporting.yaml | kubectl create -f -
    - assert:
        file: policy-ready.yaml
  - name: apply-policy-test
    try:
    - apply:
        file: namespace-with-psa-labels.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: namespace-without-psa-labels.yaml   
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: add-psa-namespace-reporting
